@@ -4,6 +4,7 @@ Changes to 1.2.6 +nb
 *lib/phpmailer -> removed, now new phpmailer in ext
 *lib/sendmail.php -> moved the phpmailer from lib/phpmailer to ext to composer.json in an effort to organize addons better
 *lib/systemmail.php -> minor syntax fixes and autoload implementation of the ext-Folder
+*newday.php -> added new setting "debtfloor" which will prevent people to get infinite minus gold in bank (will break database fields else!)
 [FIXES]
 *lib/all_tables.php and several --> 0000-00-00 00:00:00 is not valid DATETIME since MySQL 5.7 anymore. Hence, new constants DATETIME_DATEMIN and _DATEMAX have been introduced in lib/constants.php. Default is set to 1970-01-01 ... and 2159-01-01 ... - max could be 9999-12-31, but if I get older than 160 years, I'll fix that for you - also set a few size values from int to bigint
 *lib/events.php -> replaced $PHPSELF with $_SERVER['PHP_SELF']
